Adding low quality versions of missing base tiles.

--- a/content/D2E/base/tiles.ini
+++ b/content/D2E/base/tiles.ini
@@ -168,7 +168,12 @@ left=46
 image="../ffg/img/009B.dds"
 traits=inside dirt
 
-;10A is missing
+[TileSide10A]
+top=3.5
+left=21.5
+pps=72
+image="img/010A.png"
+traits=outside farm
 
 [TileSide10B]
 top=46
@@ -248,7 +253,12 @@ left=46
 image="../ffg/img/016B.dds"
 traits=inside
 
-;17A is missing
+[TileSide17A]
+top=21.5
+left=21.5
+pps=72
+image="img/017A.png"
+traits=outside
 
 [TileSide17B]
 top=59
@@ -256,9 +266,19 @@ left=33
 image="../ffg/img/017B.dds"
 traits=inside
 
-;17B is missing
-;18A is missing
-;18B is missing
+[TileSide18A]
+top=21.5
+left=21.5
+pps=72
+image="img/018A.png"
+traits=outside
+
+[TileSide18B]
+top=21.5
+left=3.5
+pps=72
+image="img/018B.png"
+traits=inside
 
 [TileSide19A]
 top=197
@@ -398,7 +418,12 @@ left=46
 image="../ffg/img/030A.dds"
 traits=outside
 
-;30B is missing
+[TileSide30B]
+top=3.5
+left=21.5
+pps=72
+image="img/030B.png"
+traits=inside
 
 [TileSideCapA]
 top=90
