--- a/quests/D2E/affairsofwizards/quest.ini
+++ b/quests/D2E/affairsofwizards/quest.ini
@@ -1,7 +1,7 @@
 ; Saved by version: 0.1.0
 [Quest]
-name=Example Quest
-description=Show how things work!  Also used for testing different functions.
+name=Affairs of Wizards
+description=Greyhaven is having trouble at the cemetary and have posted a generous bounty.
 type=D2E
 minpany=-7
 minpanx=-6
