--- a/quests/D2E/affairsofwizards/quest.ini
+++ b/quests/D2E/affairsofwizards/quest.ini
@@ -1,159 +1,197 @@
-; Saved by version: 0.1.0
+; Saved by version: 0.5.2b
 [Quest]
-name=Affairs of Wizards
-description=Greyhaven is having trouble at the cemetary and have posted a generous bounty.
+name=Affairs of Wizards WIP-Edit
+description="Greyhaven is having trouble at the cemetary and have posted a generous bounty."
 type=D2E
-minpany=-7
-minpanx=-6
-maxpanx=8
+minpany=-6
+minpanx=-8
+maxpanx=17
 maxpany=10
 
-[TileEntry]
-xposition=-3
-yposition=3
-side=TileSide2B
-
-[TileCorner]
-xposition=1
-yposition=8
-side=TileSide9B
-rotation=-90
-
-[TileEnd]
-xposition=2
-yposition=6
-side=TileSideEntranceStairB
-rotation=90
-
-[TileEntryCap]
-xposition=-1
-yposition=-3
-side=TileSideCapB
-
-[TileExtension]
-xposition=-1
-yposition=4
-side=TileSideExtensionB
-
-[TileCornerCap]
-xposition=0
-yposition=9
-side=TileSideCapB
-rotation=180
-
 [EventStart]
-text="<b>Perform the Following:</b>\n\nSet aside tiles 2 and 9."
+text="<b>Perform the Following:</b>\n\nSet aside tiles 6, 10, 13, 14, 16, 19, 21, 22 and 23."
 event=EventIntroText
 trigger=EventStart
 
 [EventIntroText]
-text="<i>Following reports of a disturbance at the local cemetery you head up the hill and begin exploring the area.</i>\n\n<b>Perform the Following:</b>\n\nChoose 1 hero to lead the exploration."
-event=EventIntroFall
-minhero=1
-maxhero=1
+text="<i>Greyhaven is paying a bounty for putting an end to dark magic coming from a large crypt in the cemetery.  Attempts to get in have thus far been unsuccessful as the crypt is locked with a series of 5 magic doors.</i>"
+event=EventIntroBoard1
 
-[EventIntroFall]
-text="The selected hero tests {awareness}."
-event=EventIntroNoFall
-failevent=EventIntroFell
-hero=EventIntroText
-
-[EventIntroFell]
-text="<i>The ground gives way underneath you as you stumble into a pit trap!</i>\n\n<b>Perform the Following:</b>\n\nThe indicated hero takes 5 {heart}."
-event=EventIntroBoard
-set=fell
-
-[EventIntroNoFall]
-text="<i>You notice the ground has been recently dug in this area.  Moving some overgrowth asside reveals a pit.  The Party carefully descends.</i>"
-event=EventIntroBoard
-
-[EventIntroBoard]
+[EventIntroBoard1]
 xposition=0
 yposition=0
-text="<b>Perform the Following:</b>\n\nPlace 2B, 1 extender, 1 end cap, and 1 locked door."
-event=EventHeroPlaceFall EventHeroPlaceNoFall
-add=TileEntry TileEntryCap TileExtension DoorLocked
+text="<b>Perform the Following:</b>\n\nPlace tiles 6A, 13A, 16A, 1 transition, 1 entry, 1 door."
+event=EventIntroBoard2
+add=TileStream TileCaretaker TileOutsideFork TileTransition TileEntry DoorCabin
 
-[EventHeroPlaceFall]
-xposition=0
-yposition=0
-text="<b>Perform the Following:</b>\n\nPlace the selected hero in the indicated space, then place all other heros adjacent to this space."
-highlight=true
-event=EventIntroSearch
-hero=EventIntroText
-flags=fell
+[EventIntroBoard2]
+xposition=9
+yposition=1
+text="<b>Perform the Following:</b>\n\nPlace tiles 14A, 22A, and 1 end cap."
+event=EventIntroBoard3
+add=TileOutsideGraves TileOutsideNarrow TileOutsideCap
+set=nokey1 nokey2 nokey3 nokey4 nokey5
 
-[EventHeroPlaceNoFall]
-xposition=0
-yposition=0
-text="<b>Perform the Following:</b>\n\nPlace all heroes on or adjacent to the indicated space."
-highlight=true
-event=EventIntroSearch
+[EventIntroBoard3]
+xposition=2
+yposition=-2
+text="<b>Perform the Following:</b>\n\nPlace 1 locked door as shown, this is the Door of Reflection."
+add=DoorCrypt1
+event=EventIntroHeroes
 
-[EventIntroSearch]
+[EventIntroHeroes]
+xposition=-6
+yposition=1
+text="<b>Perform the Following:</b>\n\nPlace the heroes on the entrance."
+event=EventIntroSearch1
+
+[EventIntroSearch1]
+xposition=-5
+yposition=-1
 text="<b>Perform the Following:</b>\n\nPlace 1 search token as shown."
-event=MonsterIntro
-add=TokenSearchPuddle
+add=TokenKey4
+event=EventIntroSearch2
 
-[EventIntroObj]
-text="Objective: Investigate the crypt."
+[EventIntroSearch2]
+xposition=15
+yposition=1
+text="<b>Perform the Following:</b>\n\nPlace 1 additional search token as shown."
+add=TokenKey1
 
-[EventPuddle]
-text="<i>Searching through the mud you find a key the looks as if it may fit in this room's door.</i>  The door may now be opened by any hero.\n\n<b>Perform the Following:</b>\n\nRemove this search token from the board."
-add=DoorUnlocked
-remove=DoorLocked TokenSearchPuddle
+[EventOpenHut]
+xposition=5
+yposition=7
+text="<b>Perform the Following:</b>\n\nPlace 1 end cap."
+event=EventHutSearch
+add=TileHutCap
 
-[EventPuddleNoDoor]
-text="<i>Searching through the mud you find a key the looks as if it may have fit in this room's door, though this is no longer required.</i>\n\n<b>Perform the Following:</b>\n\nRemove this search token from the board."
-remove=TokenSearchPuddle
-flags=nodoor
+[EventHutSearch]
+xposition=5
+yposition=7
+text="<b>Perform the Following:</b>\n\nPlace 2 search tokens as shown."
+add=TokenKey2 TokenKey3
 
-[EventForceDoor]
-text="<i>You successfully force the door open and break into the adjoining room.</i>"
-event=EventNextRoom
-remove=DoorLocked
+[EventDoor1Fail]
+text="<i>You find yourself unable to pass your own reflection.</i>"
 
-[EventNextRoom]
-xposition=1
-yposition=5
-text="<b>Perform the Following:</b>\n\nPlace 9B, an entrance and 1 end caps."
-event=EventCornerDetails
-add=TileCorner TileEnd TileCornerCap
-remove=DoorLocked DoorUnlocked
-set=nodoor
+[EventOpenDoor1]
+xposition=3
+yposition=-3
+text="<b>Perform the Following:</b>\n\nPlace 1 locked door, this is the Door of Pain."
+remove=DoorCrypt1 DoorCryptUnlocked1
+add=DoorCrypt2
+set=open1
 
-[EventFailDoor]
-text="<i>You ram the door, however you acheive nothing other than bruises.</i>\n\n<b>Perform the Following:</b>\n\nThe hero who failed the test takes 1 {heart}."
+[EventDoor2Fail]
+text="<i>You find yourself unable to overcome the pain and retreat from the door.</i>"
 
-[EventCornerDetails]
-xposition=0
-yposition=9
-text="<i>A master flesh moulder is performing a rite within this cyrpt.  Strange Runes glow on the floor.</i>\n\n<b>Perform the Following:</b>\n\nPlace 1 red objective token as shown.  This is the runes."
-event=MonsterFleshMoulders
-add=TokenRunes
-set=runes
+[EventOpenDoor2]
+xposition=-1
+yposition=-4
+text="<b>Perform the Following:</b>\n\nPlace tiles 21B, 23B, and 1 end cap."
+add=TileInsideRiver TileInsideFork TileInsideRiverCap
+remove=DoorCrypt2 DoorCryptUnlocked2
+set=open2
+event=EventOpenDoor2B
 
-[EventRunesFail]
-text="<i>You are unable to stop the dark magic.</i>"
+[EventOpenDoor2B]
+xposition=2
+yposition=-4
+text="<b>Perform the Following:</b>\n\nPlace 1 locked door, this is the Door of Illusion."
+add=DoorCrypt3
 
-[EventRunesPass]
-text="<i>You manage to quell the dark magic from the runes, though with the flesh moulder still present your work is not yet done.</i>\n\n<b>Perform the Following:</b>\n\nRemove this quest token from the board."
-remove=TokenRunes
-set=runegone
-clear=runes
+[EventOpenDoor3]
+xposition=5
+yposition=-4
+text="<b>Perform the Following:</b>\n\nPlace 1 locked door, this is the Door of Endurance."
+add=DoorCrypt4
+remove=DoorCrypt3 DoorCryptUnlocked3
+set=open3
 
-[EventRunesPassNoFM]
-text="<i>You manage to quell the dark magic from the runes.</i>"
-event=EventEndWin
-flags=fmgone
-set=runegone
-clear=runes
+[EventDoor3Fail]
+text="<i>You are lost in a maze that is not of this reality.</i>\n\nThe hero who performed the test gains the Stunned and Immobilized conditions."
 
-[EventFmDefeat]
-text="<i>With the flesh moulder defeated the runes dim, but still remain.</i>"
-trigger=DefeatedUniqueMonsterFleshMoulder
-flags=runes
-set=fmgone
+[EventOpenDoor4]
+xposition=9
+yposition=-4
+text="<b>Perform the Following:</b>\n\nPlace tile 19B and 1 locked door, this is the Door of Strength."
+add=TileStairs DoorCrypt5
+remove=DoorCrypt4 DoorCryptUnlocked4
+set=open4
+
+[EventOpenDoor5]
+xposition=14
+yposition=-3
+text="<b>Perform the Following:</b>\n\nPlace tile 10B and 1 end cap."
+add=TileLowerCrypt TileEndCap
+remove=DoorCrypt5 DoorCryptUnlocked5
+set=open5
+
+[EventKey1]
+flags=nokey1
+clear=nokey1
+event=EventKey1Open EventKey1Closed
+
+[EventKey1Open]
+text="You found the key to the Door of Reflection, having passed this hurdle the key is of no use."
+flags=open1
+
+[EventKey1Closed]
+text="You found needed key 1!"
+remove=DoorCrypt1
+add=DoorCryptUnlocked1
+
+[EventKey2]
+flags=nokey2
+clear=nokey2
+
+[EventKey2Open]
+text="You found the key to the Door of Pain, having passed this hurdle the key is of no use."
+flags=open2
+
+[EventKey2Closed]
+text="You found needed key 2!"
+remove=DoorCrypt2
+add=DoorCryptUnlocked2
+
+[EventKey3]
+flags=nokey3
+clear=nokey3
+
+[EventKey3Open]
+text="You found the key to the Door of Illusion, having passed this hurdle the key is of no use."
+flags=open3
+
+[EventKey3Closed]
+text="You found needed key 3!"
+remove=DoorCrypt3
+add=DoorCryptUnlocked3
+
+[EventKey4]
+flags=nokey4
+clear=nokey4
+
+[EventKey4Open]
+text="You found the key to the Door of Endurance, having passed this hurdle the key is of no use."
+flags=open4
+
+[EventKey4Closed]
+text="You found needed key 4!"
+remove=DoorCrypt4
+add=DoorCryptUnlocked4
+
+[EventKey5]
+flags=nokey5
+clear=nokey5
+
+[EventKey5Open]
+text="You found the key to the Door of Strength, having passed this hurdle the key is of no use."
+flags=open5
+
+[EventKey5Closed]
+text="You found needed key 15!"
+remove=DoorCrypt5
+add=DoorCryptUnlocked5
 
 [EventEndWin]
 text="<i>With the magic dispelled and the flesh moulder defeated you have put one more troublesome issue to rest.</i>\n\nThis ends the example quest."
@@ -161,86 +199,241 @@ trigger=DefeatedUniqueMonsterFleshMoulder
 flags=runegone
 
 [EventEndLose]
-text="<i>Your group of heros fails to stem the flood of zombies, hopefully the nearby town can rally additional support.</i>\n\nThis ends the example quest."
+text="<i>Your group of heroes fails to stop the dark magic, hopefully the Greyhaven can rally additional support.</i>\n\nThe heroes have lost the quest."
 trigger=NoMorale
 
-[DoorLocked]
-xposition=0
-yposition=4
-text="This door is locked, you may use an action and test {might} to attempt to force the door."
-event=EventForceDoor
-failevent=EventFailDoor
-color=Red
-rotation=90
-
-[DoorUnlocked]
-xposition=0
-yposition=4
-text="You can open this door with an "Open Door" action."
-event=EventNextRoom
-color=Red
-rotation=90
-
-[TokenSearchPuddle]
-xposition=-3
-yposition=-2
-text="<i>A muddy Puddle.</i>"
-event=EventPuddleNoDoor EventPuddle
-
-[TokenRunes]
-xposition=0
-yposition=9
-text="You may use an action and test {knowledge} to attempt to dispel the runes."
-event=EventRunesPassNoFM EventRunesPass
-failevent=EventRunesFail
-type=TokenObjectiveRed
-
-[MonsterIntro]
-xposition=-1
-yposition=-1
-text="<b>Perform the Following:</b>\n\nPlace the {type} group in the indicated location."
-event=EventIntroObj
-traits=cave small
-
-[MonsterFleshMoulders]
-xposition=0
-yposition=7
-text="<b>Perform the Following:</b>\n\nPlace the Flesh Moulder group in the indicated location."
-event=MonsterZombie
-monster=FleshMoulder
-placement2=MPlaceFmMaster MPlaceFmMinion1
-placement3=MPlaceFmMaster MPlaceFmMinion1 MPlaceFmMinion2
-placement4=MPlaceFmMaster MPlaceFmMinion1 MPlaceFmMinion2 MPlaceFmMinion3
-unique=true
-uniquetext="This Flesh Moulder is performing a dark ritual to raise the nearby corpses."
-
-[MonsterZombie]
-xposition=0
-yposition=6
-text="<b>Perform the Following:</b>\n\nPlace the Zombie group in the indicated location."
-monster=Zombie
-
-[MonsterRuneZombie]
-xposition=0
-yposition=9
-text="<i>A zombie appears from the runes.</i>\n\n<b>Perform the Following:</b>\n\nPlace one zombie at the indicated space."
-trigger=EndRound
-flags=runes
-monster=Zombie
-
-[MPlaceFmMaster]
-xposition=-1
-yposition=9
-master=true
-
-[MPlaceFmMinion1]
+[DoorCabin]
 xposition=3
-yposition=7
+yposition=4
+text="<i>The caretaker's cabin has seen better days.</i>\n\nYou may spend an action to open this door."
+event=EventOpenHut
+rotation=90
 
-[MPlaceFmMinion2]
-xposition=-2
+[MonsterEntry]
+xposition=-3
+yposition=0
+text=""
+monster=MonsterZombie
+
+[TileStream]
+xposition=-5
+yposition=-1
+side=TileSide6A
+rotation=90
+
+[TileCaretaker]
+xposition=2
 yposition=8
+side=TileSide13A
 
-[MPlaceFmMinion3]
-xposition=0
+[TileOutsideFork]
+xposition=1
+yposition=2
+side=TileSide16A
+
+[TileOutsideGraves]
+xposition=11
+yposition=2
+side=TileSide14A
+
+[TileTransition]
+xposition=2
+yposition=-3
+side=TileSideTransitionA
+rotation=90
+
+[TileEntry]
+xposition=-6
+yposition=1
+side=TileSideEntranceA
+rotation=270
+
+[TileInsideRiver]
+xposition=-6
+yposition=-3
+side=TileSide21B
+
+[TileInsideFork]
+xposition=5
+yposition=-5
+side=TileSide23B
+rotation=180
+
+[TileStairs]
+xposition=6
+yposition=-5
+side=TileSide19B
+rotation=90
+
+[TileLowerCrypt]
+xposition=12
+yposition=-2
+side=TileSide10B
+
+[TileEndCap]
+xposition=16
+yposition=-4
+side=TileSideCapB
+rotation=90
+
+[TileHutCap]
+xposition=5
+yposition=9
+side=TileSideCapA
+rotation=180
+
+[TileOutsideCap]
+xposition=15
+yposition=0
+side=TileSideCapA
+rotation=90
+
+[TileInsideRiverCap]
+xposition=-7
+yposition=-3
+side=TileSideCapB
+rotation=270
+
+[DoorCrypt1]
+xposition=3
+yposition=-3
+text="<i>Door of Reflection</i>\n\nAn adjacent hero may spend an action to perform an attack that targets themselves."
+confirmtext=No Damage
+failtext=Damaged
+color=red
+rotation=90
+event=EventOpenDoor1
+failevent=EventDoor1Fail
+
+[DoorCryptUnlocked1]
+xposition=3
+yposition=-3
+text="<i>Door of Reflection</i>\n\nYou have the key to this door and may open it as an action."
+color=red
+rotation=90
+event=EventOpenDoor1
+
+[TileOutsideNarrow]
+xposition=5
+yposition=1
+side=TileSide22A
+
+[TokenSpawner]
+xposition=14
+yposition=0
+text=""
+type=TokenObjectiveGreen
+
+[TokenKey3]
+xposition=7
+yposition=5
+text="Something shiny..."
+randomevents=true
+event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+
+[DoorCrypt2]
+xposition=3
+yposition=-4
+text="<i>Door of Pain</i>\n\nAn adjacent hero may spend an action to suffer 4 {heart} and test {will} to endure the pain."
+color=red
+rotation=90
+event=EventOpenDoor2
+failevent=EventDoor2Fail
+
+[DoorCryptUnlocked2]
+xposition=3
+yposition=-4
+text="<i>Door of Pain</i>\n\nYou have the key to this door and may open it as an action."
+color=red
+rotation=90
+event=EventOpenDoor2
+
+[DoorCrypt3]
+xposition=4
+yposition=-5
+text="<i>Door of Illusion</i>\n\nAn adjacent hero may spend an action to test both {knowledge} and {awareness}."
+color=red
+event=EventOpenDoor3
+failevent=EventDoor3Fail
+
+[DoorCryptUnlocked3]
+xposition=4
+yposition=-5
+text="<i>Door of Illusion</i>\n\nYou have the key to this door and may open it as an action."
+color=red
+event=EventOpenDoor3
+
+[DoorCrypt4]
+xposition=6
+yposition=-5
+text="<i>Door of Endurance</i>\n\nAn adjacent hero may spend an action to suffer 6 {fatigue} to pass the door."
+color=red
+event=EventOpenDoor4
+
+[DoorCryptUnlocked4]
+xposition=6
+yposition=-5
+text="<i>Door of Endurance</i>\n\nYou have the key to this door and may open it as an action."
+color=red
+event=EventOpenDoor4
+
+[TokenKey4]
+xposition=-5
+yposition=-1
+text="Something shiny..."
+randomevents=true
+event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+
+[TokenKey1]
+xposition=15
+yposition=1
+text="Something shiny..."
+randomevents=true
+event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+
+[TokenKey2]
+xposition=5
+yposition=9
+text="Something shiny..."
+randomevents=true
+event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+
+[MonsterCaretaker]
+xposition=4
 yposition=6
+text=""
+monster=MonsterGoblinArcher
+
+[MonsterUnderRiver]
+xposition=-5
+yposition=-4
+text=""
+monster=MonsterMerriod
+
+[DoorCrypt5]
+xposition=12
+yposition=-4
+color=red
+text="<i>Door of Strength</i>\n\nThis door may be attacked as if it was a monster.  The door has 30 {heart}."
+confirmtext=Defeated
+event=EventOpenDoor5
+
+[TokenKey5]
+xposition=-7
+yposition=-4
+text="Something shiny..."
+randomevents=true
+event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+
+[DoorCryptUnlocked5]
+xposition=-7
+yposition=-4
+text="You have the key to this door and may open it as an action."
+color=red
+event=EventOpenDoor5
+
+[MonsterStairs]
+xposition=8
+yposition=-4
+text=""
+monster=MonsterCaveSpider
