--- a/quests/D2E/affairsofwizards/quest.ini
+++ b/quests/D2E/affairsofwizards/quest.ini
@@ -1,6 +1,6 @@
 ; Saved by version: 0.5.2b
 [Quest]
-name=Affairs of Wizards WIP-Edit
+name=Affairs of Wizards
 description="Greyhaven is having trouble at the cemetary and have posted a generous bounty."
 type=D2E
 minpany=-6
@@ -64,6 +64,7 @@ yposition=7
 text="<b>Perform the Following:</b>\n\nPlace 1 end cap."
 event=EventHutSearch
 add=TileHutCap
+remove=DoorCabin
 
 [EventHutSearch]
 xposition=5
@@ -79,8 +80,14 @@ xposition=3
 yposition=-3
 text="<b>Perform the Following:</b>\n\nPlace 1 locked door, this is the Door of Pain."
 remove=DoorCrypt1 DoorCryptUnlocked1
-add=DoorCrypt2
+add=DoorCryptUnlocked2
 set=open1
+event=EventOpenDoor1NoKey
+
+[EventOpenDoor1NoKey]
+flags=nokey2
+remove=DoorCryptUnlocked2
+add=DoorCrypt2
 
 [EventDoor2Fail]
 text="<i>You find yourself unable to overcome the pain and retreat from the door.</i>"
@@ -98,15 +105,40 @@ event=EventOpenDoor2B
 xposition=2
 yposition=-4
 text="<b>Perform the Following:</b>\n\nPlace 1 locked door, this is the Door of Illusion."
+add=DoorCryptUnlocked3
+event=EventOpenDoor2Search
+
+[EventOpenDoor2Search]
+xposition=-7
+yposition=-4
+text="<b>Perform the Following:</b>\n\nPlace 1 search token as shown."
+add=TokenKey5
+event=EventOpenDoor2NoKey
+
+[EventOpenDoor2NoKey]
+flags=nokey3
+remove=DoorCryptUnlocked3
 add=DoorCrypt3
+
+[EventOpenDoor2Search]
+xposition=-7
+yposition=-4
+text="<b>Perform the Following:</b>\n\nPlace 1 search token as shown."
+add=TokenKey5
 
 [EventOpenDoor3]
 xposition=5
 yposition=-4
 text="<b>Perform the Following:</b>\n\nPlace 1 locked door, this is the Door of Endurance."
-add=DoorCrypt4
+add=DoorCryptUnlocked4
 remove=DoorCrypt3 DoorCryptUnlocked3
 set=open3
+event=EventOpenDoor3NoKey
+
+[EventOpenDoor3NoKey]
+flags=nokey4
+remove=DoorCryptUnlocked4
+add=DoorCrypt4
 
 [EventDoor3Fail]
 text="<i>You are lost in a maze that is not of this reality.</i>\n\nThe hero who performed the test gains the Stunned and Immobilized conditions."
@@ -115,9 +147,15 @@ text="<i>You are lost in a maze that is not of this reality.</i>\n\nThe hero who
 xposition=9
 yposition=-4
 text="<b>Perform the Following:</b>\n\nPlace tile 19B and 1 locked door, this is the Door of Strength."
-add=TileStairs DoorCrypt5
+add=TileStairs DoorCryptUnlocked5
 remove=DoorCrypt4 DoorCryptUnlocked4
 set=open4
+event=EventOpenDoor4NoKey
+
+[EventOpenDoor4NoKey]
+flags=nokey5
+remove=DoorCryptUnlocked5
+add=DoorCrypt5
 
 [EventOpenDoor5]
 xposition=14
@@ -126,6 +164,31 @@ text="<b>Perform the Following:</b>\n\nPlace tile 10B and 1 end cap."
 add=TileLowerCrypt TileEndCap
 remove=DoorCrypt5 DoorCryptUnlocked5
 set=open5
+
+[EventSearch1]
+randomevents=true
+event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+remove=TokenKey1
+
+[EventSearch2]
+randomevents=true
+event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+remove=TokenKey2
+
+[EventSearch3]
+randomevents=true
+event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+remove=TokenKey3
+
+[EventSearch4]
+randomevents=true
+event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+remove=TokenKey4
+
+[EventSearch5]
+randomevents=true
+event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+remove=TokenKey5
 
 [EventKey1]
 flags=nokey1
@@ -137,60 +200,80 @@ text="You found the key to the Door of Reflection, having passed this hurdle the
 flags=open1
 
 [EventKey1Closed]
-text="You found needed key 1!"
+text="You found the key to the Door of Reflection, this door may now be opened as an action."
 remove=DoorCrypt1
 add=DoorCryptUnlocked1
 
 [EventKey2]
 flags=nokey2
 clear=nokey2
+event=EventKey2Open EventKey2Closed
 
 [EventKey2Open]
 text="You found the key to the Door of Pain, having passed this hurdle the key is of no use."
 flags=open2
 
 [EventKey2Closed]
-text="You found needed key 2!"
+text="You found the key to the Door of Pain, this door may now be opened as an action."
 remove=DoorCrypt2
+event=EventKey2ClosedPresent
+
+[EventKey2ClosedPresent]
+flags=open1
 add=DoorCryptUnlocked2
 
 [EventKey3]
 flags=nokey3
 clear=nokey3
+event=EventKey3Open EventKey3Closed
 
 [EventKey3Open]
 text="You found the key to the Door of Illusion, having passed this hurdle the key is of no use."
 flags=open3
 
 [EventKey3Closed]
-text="You found needed key 3!"
+text="You found the key to the Door of Illusion, this door may now be opened as an action."
 remove=DoorCrypt3
+event=EventKey3ClosedPresent
+
+[EventKey3ClosedPresent]
+flags=open2
 add=DoorCryptUnlocked3
 
 [EventKey4]
 flags=nokey4
 clear=nokey4
+event=EventKey4Open EventKey4Closed
 
 [EventKey4Open]
 text="You found the key to the Door of Endurance, having passed this hurdle the key is of no use."
 flags=open4
 
 [EventKey4Closed]
-text="You found needed key 4!"
+text="You found the key to the Door of Endurance, this door may now be opened as an action."
 remove=DoorCrypt4
+event=EventKey4ClosedPresent
+
+[EventKey4ClosedPresent]
+flags=open3
 add=DoorCryptUnlocked4
 
 [EventKey5]
 flags=nokey5
 clear=nokey5
+event=EventKey5Open EventKey5Closed
 
 [EventKey5Open]
 text="You found the key to the Door of Strength, having passed this hurdle the key is of no use."
 flags=open5
 
 [EventKey5Closed]
-text="You found needed key 15!"
+text="You found the key to the Door of Strength, this door may now be opened as an action."
 remove=DoorCrypt5
+event=EventKey5ClosedPresent
+
+[EventKey5ClosedPresent]
+flags=open4
 add=DoorCryptUnlocked5
 
 [EventEndWin]
@@ -329,7 +412,7 @@ xposition=7
 yposition=5
 text="Something shiny..."
 randomevents=true
-event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+event=EventSearch3
 
 [DoorCrypt2]
 xposition=3
@@ -382,21 +465,21 @@ xposition=-5
 yposition=-1
 text="Something shiny..."
 randomevents=true
-event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+event=EventSearch4
 
 [TokenKey1]
 xposition=15
 yposition=1
 text="Something shiny..."
 randomevents=true
-event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+event=EventSearch1
 
 [TokenKey2]
 xposition=5
 yposition=9
 text="Something shiny..."
 randomevents=true
-event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+event=EventSearch2
 
 [MonsterCaretaker]
 xposition=4
@@ -423,10 +506,10 @@ xposition=-7
 yposition=-4
 text="Something shiny..."
 randomevents=true
-event=EventKey1 EventKey2 EventKey3 EventKey4 EventKey5
+event=EventSearch5
 
 [DoorCryptUnlocked5]
-xposition=-7
+xposition=12
 yposition=-4
 text="You have the key to this door and may open it as an action."
 color=red
