More work on AoW plus some debug info.

--- a/quests/D2E/affairsofwizards/quest.ini
+++ b/quests/D2E/affairsofwizards/quest.ini
@@ -57,6 +57,11 @@ xposition=15
 yposition=1
 text="<b>Perform the Following:</b>\n\nPlace 1 additional search token as shown."
 add=TokenKey1
+event=MonsterEntry
+
+[EventNewSpirit]
+trigger=RoundEnd
+event=MonsterSpirit
 
 [EventOpenHut]
 xposition=5
@@ -71,6 +76,7 @@ xposition=5
 yposition=7
 text="<b>Perform the Following:</b>\n\nPlace 2 search tokens as shown."
 add=TokenKey2 TokenKey3
+event=MonsterCaretaker
 
 [EventDoor1Fail]
 text="<i>You find yourself unable to pass your own reflection.</i>"
@@ -113,12 +119,13 @@ xposition=-7
 yposition=-4
 text="<b>Perform the Following:</b>\n\nPlace 1 search token as shown."
 add=TokenKey5
-event=EventOpenDoor2NoKey
+event=EventOpenDoor2NoKey MonsterUnderRiver
 
 [EventOpenDoor2NoKey]
 flags=nokey3
 remove=DoorCryptUnlocked3
 add=DoorCrypt3
+event=MonsterUnderRiver
 
 [EventOpenDoor2Search]
 xposition=-7
@@ -150,12 +157,13 @@ text="<b>Perform the Following:</b>\n\nPlace tile 19B and 1 locked door, this is
 add=TileStairs DoorCryptUnlocked5
 remove=DoorCrypt4 DoorCryptUnlocked4
 set=open4
-event=EventOpenDoor4NoKey
+event=EventOpenDoor4NoKey MonsterStairs
 
 [EventOpenDoor4NoKey]
 flags=nokey5
 remove=DoorCryptUnlocked5
 add=DoorCrypt5
+event=MonsterStairs
 
 [EventOpenDoor5]
 xposition=14
@@ -164,6 +172,10 @@ text="<b>Perform the Following:</b>\n\nPlace tile 10B and 1 end cap."
 add=TileLowerCrypt TileEndCap
 remove=DoorCrypt5 DoorCryptUnlocked5
 set=open5
+event=MonsterSupport
+
+[EventShowdown]
+text="<i>The Flesh Moulders are clearly behind the foul magic</i>\n\nDefeat the Flesh Moulders to win."
 
 [EventSearch1]
 randomevents=true
@@ -277,9 +289,8 @@ flags=open4
 add=DoorCryptUnlocked5
 
 [EventEndWin]
-text="<i>With the magic dispelled and the flesh moulder defeated you have put one more troublesome issue to rest.</i>\n\nThis ends the example quest."
-trigger=DefeatedUniqueMonsterFleshMoulder
-flags=runegone
+text="<i>With the flesh moulders defeated you have put one more troublesome issue to rest.</i>\n\nThe heroes have won the quest."
+trigger=DefeatedMonsterFleshMoulder
 
 [EventEndLose]
 text="<i>Your group of heroes fails to stop the dark magic, hopefully the Greyhaven can rally additional support.</i>\n\nThe heroes have lost the quest."
@@ -295,8 +306,9 @@ rotation=90
 [MonsterEntry]
 xposition=-3
 yposition=0
-text=""
+text="Place the {type} group as shown."
 monster=MonsterZombie
+event=MonsterSpirit
 
 [TileStream]
 xposition=-5
@@ -401,12 +413,6 @@ xposition=5
 yposition=1
 side=TileSide22A
 
-[TokenSpawner]
-xposition=14
-yposition=0
-text=""
-type=TokenObjectiveGreen
-
 [TokenKey3]
 xposition=7
 yposition=5
@@ -484,13 +490,13 @@ event=EventSearch2
 [MonsterCaretaker]
 xposition=4
 yposition=6
-text=""
+text="Place the {type} group as shown."
 monster=MonsterGoblinArcher
 
 [MonsterUnderRiver]
 xposition=-5
 yposition=-4
-text=""
+text="Place the {type} group as shown."
 monster=MonsterMerriod
 
 [DoorCrypt5]
@@ -518,5 +524,39 @@ event=EventOpenDoor5
 [MonsterStairs]
 xposition=8
 yposition=-4
-text=""
+text="Place the {type} group as shown."
 monster=MonsterCaveSpider
+
+[MonsterFinal]
+xposition=16
+yposition=-3
+text="Place the {type} group as shown."
+monster=MonsterFleshMoulder
+event=EventShowdown
+
+[MonsterSupport]
+xposition=13
+yposition=-4
+text="Place the {type} group as shown."
+monster=MonsterBarghest
+event=MonsterFinal
+
+[MonsterSpirit]
+xposition=13
+yposition=1
+text="Place an Elemental at the indicated space.  This is an Arcane Spirit.  Arcane spirits have a group limit of 2 for all hero groups."
+monster=UniqueMonsterSpirit
+
+[UniqueMonsterSpirit]
+base=MonsterElemental
+name="Arcane Spirit"
+info="Arcane Spirits use Elemental minitures and monster card.  The group limit is always 2 for all hero groups."
+activation=Rage
+
+[ActivationRage]
+ability="Things!"
+minion="Stuff!"
+master="Other Stuff!"
+minionfirst=true
+
+
