--- a/quests/D2E/affairsofwizards/quest.ini
+++ b/quests/D2E/affairsofwizards/quest.ini
@@ -60,7 +60,7 @@ add=TokenKey1
 event=MonsterEntry
 
 [EventNewSpirit]
-trigger=RoundEnd
+trigger=EndRound
 event=MonsterSpirit
 
 [EventOpenHut]
@@ -551,12 +551,19 @@ monster=UniqueMonsterSpirit
 base=MonsterElemental
 name="Arcane Spirit"
 info="Arcane Spirits use Elemental minitures and monster card.  The group limit is always 2 for all hero groups."
-activation=Rage
+activation=Scream Blast
 
-[ActivationRage]
-ability="Things!"
-minion="Stuff!"
-master="Other Stuff!"
-minionfirst=true
+[ActivationScream]
+ability="<i>The Arcane Spirits emmit an ear splitting scream.</i>\nBefore each activation all heroes in line of sight suffer 1 {fatigue}."
+minion="{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
+master="{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
 
+[ActivationBlast]
+ability="<i>An Explosion of spectral energy radiates out from the Arcane Spirit.</i>\nAfter each activation all adjacent heroes suffer 2 {heart} then the Arcane Spirit suffers 1 {heart} for each adjacent hero."
+minion="{action} Engage as many heros as possible.\n{action} Attack the closest hero within 3 spaces."
+master="{action} Engage as many heros as possible.\n{action} Attack the closest hero within 3 spaces."
 
+[ActivationGaze]
+ability="<i>The gaze of the Arcane Spirit penetrates your being.</i>\nAll attacks gain Pierce 3.  Any hero who suffers damage this activation also suffers 1 {fatigue}."
+minion="{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
+master="{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
