Newlines in activation ability.

--- a/quests/D2E/affairsofwizards/quest.ini
+++ b/quests/D2E/affairsofwizards/quest.ini
@@ -544,19 +544,19 @@ event=MonsterFinal
 [MonsterSpirit]
 xposition=13
 yposition=1
-text="Place an Elemental at the indicated space.  This is an Arcane Spirit.  Arcane spirits have a group limit of 2 for all hero groups."
+text="Place an Elemental at the indicated space.  This is an Arcane Spirit."
 monster=UniqueMonsterSpirit
 
 [UniqueMonsterSpirit]
 base=MonsterElemental
 name="Arcane Spirit"
-info="Arcane Spirits use Elemental minitures and monster card.  The group limit is always 2 for all hero groups."
-activation=Scream Blast
+info="Arcane Spirits use Elemental miniatures and monster card."
+activation=Scream Blast Rush Gaze
 
 [ActivationScream]
 ability="<i>The Arcane Spirits emmit an ear splitting scream.</i>\nBefore each activation all heroes in line of sight suffer 1 {fatigue}."
-minion="{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
-master="{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
+minion="{action} Spot the hero with the lowest {will} within 6 spaces.\n{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
+master="{action} Spot the hero with the lowest {knowledge} within 6 spaces.\n{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
 
 [ActivationBlast]
 ability="<i>An Explosion of spectral energy radiates out from the Arcane Spirit.</i>\nAfter each activation all adjacent heroes suffer 2 {heart} then the Arcane Spirit suffers 1 {heart} for each adjacent hero."
@@ -567,3 +567,8 @@ master="{action} Engage as many heros as possible.\n{action} Attack the closest 
 ability="<i>The gaze of the Arcane Spirit penetrates your being.</i>\nAll attacks gain Pierce 3.  Any hero who suffers damage this activation also suffers 1 {fatigue}."
 minion="{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
 master="{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
+
+[ActivationRush]
+ability="<i>The Arcane Spirit moves faster than you can track.</i>\nAny attackst agains a hero with no remaining {fatigue} gain +2 {heart}."
+minion="{action} Place the Arcane Spirit Adjecent to the hero with the most {fatigue} suffered.\n{action} Attack the hero with the most {fatigue} suffered."
+master="{action} Place the Arcane Spirit Adjecent to the hero with the most {fatigue} suffered.\n{action} Attack the hero with the most {fatigue} suffered."
