AoW done (other than balancing).

--- a/quests/D2E/affairsofwizards/quest.ini
+++ b/quests/D2E/affairsofwizards/quest.ini
@@ -9,9 +9,37 @@ maxpanx=17
 maxpany=10
 
 [EventStart]
+text="Are the heros playing this as a Basic or Epic quest?"
+confirmtext=Basic
+failtext=Epic
+trigger=EventStart
+event=EventBasic
+failevent=EventEpic
+
+[EventBasic]
+set=basic
+event=EventTiles
+
+[EventEpic]
+text="Are the heros playing this at Advanced or Expert level?"
+confirmtext=Advanced
+failtext=Expert
+set=epic
+event=EventAdvanced
+failevent=EventExpert
+
+[EventAdvanced]
+set=advanced
+event=EventTiles
+
+[EventExpert]
+set=expert
+event=EventTiles
+threat=2
+
+[EventTiles]
 text="<b>Perform the Following:</b>\n\nSet aside tiles 6, 10, 13, 14, 16, 19, 21, 22 and 23."
 event=EventIntroText
-trigger=EventStart
 
 [EventIntroText]
 text="<i>Greyhaven is paying a bounty for putting an end to dark magic coming from a large crypt in the cemetery.  Attempts to get in have thus far been unsuccessful as the crypt is locked with a series of 5 magic doors.</i>"
@@ -59,9 +87,16 @@ text="<b>Perform the Following:</b>\n\nPlace 1 additional search token as shown.
 add=TokenKey1
 event=MonsterEntry
 
-[EventNewSpirit]
+[EventNewSpiritEpic]
 trigger=EndRound
+flags=epic
 event=MonsterSpirit
+
+[EventNewSpiritBasic]
+trigger=EndRound2
+flags=basic
+event=MonsterSpirit
+delayedevents=2:EventNewSpiritBasic
 
 [EventOpenHut]
 xposition=5
@@ -70,6 +105,7 @@ text="<b>Perform the Following:</b>\n\nPlace 1 end cap."
 event=EventHutSearch
 add=TileHutCap
 remove=DoorCabin
+threat=-0.5
 
 [EventHutSearch]
 xposition=5
@@ -89,6 +125,7 @@ remove=DoorCrypt1 DoorCryptUnlocked1
 add=DoorCryptUnlocked2
 set=open1
 event=EventOpenDoor1NoKey
+threat=-1
 
 [EventOpenDoor1NoKey]
 flags=nokey2
@@ -106,6 +143,7 @@ add=TileInsideRiver TileInsideFork TileInsideRiverCap
 remove=DoorCrypt2 DoorCryptUnlocked2
 set=open2
 event=EventOpenDoor2B
+threat=-1
 
 [EventOpenDoor2B]
 xposition=2
@@ -141,6 +179,7 @@ add=DoorCryptUnlocked4
 remove=DoorCrypt3 DoorCryptUnlocked3
 set=open3
 event=EventOpenDoor3NoKey
+threat=-1
 
 [EventOpenDoor3NoKey]
 flags=nokey4
@@ -158,6 +197,7 @@ add=TileStairs DoorCryptUnlocked5
 remove=DoorCrypt4 DoorCryptUnlocked4
 set=open4
 event=EventOpenDoor4NoKey MonsterStairs
+threat=-1
 
 [EventOpenDoor4NoKey]
 flags=nokey5
@@ -173,6 +213,7 @@ add=TileLowerCrypt TileEndCap
 remove=DoorCrypt5 DoorCryptUnlocked5
 set=open5
 event=MonsterSupport
+threat=-1
 
 [EventShowdown]
 text="<i>The Flesh Moulders are clearly behind the foul magic</i>\n\nDefeat the Flesh Moulders to win."
@@ -208,11 +249,11 @@ clear=nokey1
 event=EventKey1Open EventKey1Closed
 
 [EventKey1Open]
-text="You found the key to the Door of Reflection, having passed this hurdle the key is of no use."
+text="You found the key to the Door of Reflection, having passed this hurdle the key is of no use.  Draw 1 search card."
 flags=open1
 
 [EventKey1Closed]
-text="You found the key to the Door of Reflection, this door may now be opened as an action."
+text="You found the key to the Door of Reflection, this door may now be opened as an action.  Draw 1 search card."
 remove=DoorCrypt1
 add=DoorCryptUnlocked1
 
@@ -222,11 +263,11 @@ clear=nokey2
 event=EventKey2Open EventKey2Closed
 
 [EventKey2Open]
-text="You found the key to the Door of Pain, having passed this hurdle the key is of no use."
+text="You found the key to the Door of Pain, having passed this hurdle the key is of no use.  Draw 1 search card."
 flags=open2
 
 [EventKey2Closed]
-text="You found the key to the Door of Pain, this door may now be opened as an action."
+text="You found the key to the Door of Pain, this door may now be opened as an action.  Draw 1 search card."
 remove=DoorCrypt2
 event=EventKey2ClosedPresent
 
@@ -240,11 +281,11 @@ clear=nokey3
 event=EventKey3Open EventKey3Closed
 
 [EventKey3Open]
-text="You found the key to the Door of Illusion, having passed this hurdle the key is of no use."
+text="You found the key to the Door of Illusion, having passed this hurdle the key is of no use.  Draw 1 search card."
 flags=open3
 
 [EventKey3Closed]
-text="You found the key to the Door of Illusion, this door may now be opened as an action."
+text="You found the key to the Door of Illusion, this door may now be opened as an action.  Draw 1 search card."
 remove=DoorCrypt3
 event=EventKey3ClosedPresent
 
@@ -258,11 +299,11 @@ clear=nokey4
 event=EventKey4Open EventKey4Closed
 
 [EventKey4Open]
-text="You found the key to the Door of Endurance, having passed this hurdle the key is of no use."
+text="You found the key to the Door of Endurance, having passed this hurdle the key is of no use.  Draw 1 search card."
 flags=open4
 
 [EventKey4Closed]
-text="You found the key to the Door of Endurance, this door may now be opened as an action."
+text="You found the key to the Door of Endurance, this door may now be opened as an action.  Draw 1 search card."
 remove=DoorCrypt4
 event=EventKey4ClosedPresent
 
@@ -276,11 +317,11 @@ clear=nokey5
 event=EventKey5Open EventKey5Closed
 
 [EventKey5Open]
-text="You found the key to the Door of Strength, having passed this hurdle the key is of no use."
+text="You found the key to the Door of Strength, having passed this hurdle the key is of no use.  Draw 1 search card."
 flags=open5
 
 [EventKey5Closed]
-text="You found the key to the Door of Strength, this door may now be opened as an action."
+text="You found the key to the Door of Strength, this door may now be opened as an action.  Draw 1 search card."
 remove=DoorCrypt5
 event=EventKey5ClosedPresent
 
@@ -416,7 +457,7 @@ side=TileSide22A
 [TokenKey3]
 xposition=7
 yposition=5
-text="Something shiny..."
+text="There is a gap between the floor boards in the corner."
 randomevents=true
 event=EventSearch3
 
@@ -469,21 +510,21 @@ event=EventOpenDoor4
 [TokenKey4]
 xposition=-5
 yposition=-1
-text="Something shiny..."
+text="Something glistens in the bushes."
 randomevents=true
 event=EventSearch4
 
 [TokenKey1]
 xposition=15
 yposition=1
-text="Something shiny..."
+text="An ornamental vase lies on the ground."
 randomevents=true
 event=EventSearch1
 
 [TokenKey2]
 xposition=5
 yposition=9
-text="Something shiny..."
+text="A small pouch lies on the ground."
 randomevents=true
 event=EventSearch2
 
@@ -510,7 +551,7 @@ event=EventOpenDoor5
 [TokenKey5]
 xposition=-7
 yposition=-4
-text="Something shiny..."
+text="Something has slipped between the cracks in the stones."
 randomevents=true
 event=EventSearch5
 
@@ -555,8 +596,8 @@ activation=Scream Blast Rush Gaze
 
 [ActivationScream]
 ability="<i>The Arcane Spirits emmit an ear splitting scream.</i>\nBefore each activation all heroes in line of sight suffer 1 {fatigue}."
-minion="{action} Spot the hero with the lowest {will} within 6 spaces.\n{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
-master="{action} Spot the hero with the lowest {knowledge} within 6 spaces.\n{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
+minion="{action} Spot the hero with the lowest {will} within 6 spaces.\n{action} Spot the closest hero.\n{action} Attack the hero with the lowest {will} within 3 spaces.\n{action} Attack the closest hero within 3 spaces."
+master="{action} Spot the hero with the lowest {knowledge} within 6 spaces.\n{action} Spot the closest hero.\n{action} Attack the hero with the lowest {knowledge} within 3 spaces.\n{action} Attack the closest hero within 3 spaces."
 
 [ActivationBlast]
 ability="<i>An Explosion of spectral energy radiates out from the Arcane Spirit.</i>\nAfter each activation all adjacent heroes suffer 2 {heart} then the Arcane Spirit suffers 1 {heart} for each adjacent hero."
@@ -564,11 +605,11 @@ minion="{action} Engage as many heros as possible.\n{action} Attack the closest 
 master="{action} Engage as many heros as possible.\n{action} Attack the closest hero within 3 spaces."
 
 [ActivationGaze]
-ability="<i>The gaze of the Arcane Spirit penetrates your being.</i>\nAll attacks gain Pierce 3.  Any hero who suffers damage this activation also suffers 1 {fatigue}."
+ability="<i>The gaze of the Arcane Spirit penetrates your being.</i>\nAny attackst agains a hero with no remaining {fatigue} gain +2 {heart}."
 minion="{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
 master="{action} Spot the closest hero.\n{action} Attack the closest hero within 3 spaces."
 
 [ActivationRush]
-ability="<i>The Arcane Spirit moves faster than you can track.</i>\nAny attackst agains a hero with no remaining {fatigue} gain +2 {heart}."
-minion="{action} Place the Arcane Spirit Adjecent to the hero with the most {fatigue} suffered.\n{action} Attack the hero with the most {fatigue} suffered."
-master="{action} Place the Arcane Spirit Adjecent to the hero with the most {fatigue} suffered.\n{action} Attack the hero with the most {fatigue} suffered."
+ability="<i>The Arcane Spirit moves faster than you can track.</i>\nAll attacks gain Pierce 2.  Any hero who suffers damage this activation also suffers 1 {fatigue}."
+minion="{action} Place the Arcane Spirit Adjecent to the hero with the least {fatigue} remaining.\n{action} Attack the hero with the least {fatigue} remaining."
+master="{action} Place the Arcane Spirit Adjecent to the hero with the most {fatigue} remaining.\n{action} Attack the hero with the most {fatigue} remaining."
