Added tiles from MoM 1.1.0, aspect not checked.

--- a/content/MoM/fa/tiles.ini
+++ b/content/MoM/fa/tiles.ini
@@ -1,3 +1,18 @@
+[TileSideGeneratorRoom]
+image="../ffg/img/Tile_Generator_Room_MAD06.dds"
+
+[TileSideGraveyard2]
+image="../ffg/img/Tile_Graveyard_2_MAD06.dds"
+
+[TileSideHiddenLaboratory]
+image="../ffg/img/Tile_Hidden_Laboratory_MAD06.dds"
+
+[TileSideMedicalStorage]
+image="../ffg/img/Tile_Medical_Storage_MAD06.dds"
+
+[TileSideMorgue]
+image="../ffg/img/Tile_Morgue_MAD06.dds"
+
 [TileSideOfficeFA]
 image="../ffg/img/Tile_Office_MAD06.dds"
 
