Save games and MoM scaling.

--- a/content/MoM/cotw/tiles.ini
+++ b/content/MoM/cotw/tiles.ini
@@ -3,12 +3,16 @@ image="../ffg/img/Tile_Abandoned_Shack_MAD09.dds"
 
 [TileSideBarn]
 image="../ffg/img/Tile_Barn_MAD09.dds"
+aspect=1.5
+pps=146.28571
 
 [TileSideCaveEntrance]
 image="../ffg/img/Tile_Cave_Entrance_MAD09.dds"
 
 [TileSideCoveredBridge]
 image="../ffg/img/Tile_Covered_Bridge_MAD09.dds"
+aspect=1.5
+pps=146.28571
 
 [TileSideHillTop]
 image="../ffg/img/Tile_HillTop_MAD09.dds"
@@ -18,6 +22,8 @@ image="../ffg/img/Tile_Marshland_MAD09.dds"
 
 [TileSideOldForest]
 image="../ffg/img/Tile_Old_Forest_MAD09.dds"
+aspect=1.5
+pps=146.28571
 
 [TileSideOldOak]
 image="../ffg/img/Tile_Old_Oak_MAD09.dds"
@@ -45,3 +51,5 @@ image="../ffg/img/Tile_Torture_Chamber_MAD09.dds"
 
 [TileSideWaterwheel]
 image="../ffg/img/Tile_Waterwheel_MAD09.dds"
+aspect=1.5
+pps=146.28571
