--- a/content/MoM/mom1e/tiles.ini
+++ b/content/MoM/mom1e/tiles.ini
@@ -19,7 +19,7 @@ image="../ffg/img/Tile_Dining_Room_MAD01.dds"
 [TileSideFoyer]
 image="../ffg/img/Tile_Foyer_MAD01.dds"
 aspect=1.5
-pps=170.6666667
+pps=146.28571
 
 [TileSideFrontPorch]
 image="../ffg/img/Tile_Front_Porch_MAD01.dds"
