Updating example scenario and version.

--- a/quests/MoM/Example/quest.ini
+++ b/quests/MoM/Example/quest.ini
@@ -1,4 +1,4 @@
-; Saved by version: 0.3.2b
+; Saved by version: 0.5.3b
 [Quest]
 name=Example Scenario
 description=""
@@ -11,12 +11,12 @@ maxpany=4
 
 [TileStart]
 xposition=0
-yposition=2
+yposition=3.5
 side=TileSideAlleyCorner2
 
 [TileSecondAlley]
 xposition=0
-yposition=-1
+yposition=0
 side=TileSideAlley1
 
 [EventStart]
@@ -27,34 +27,34 @@ add=TileStart TokenDoor
 trigger=EventStart
 
 [TokenDoor]
-xposition=4.5
-yposition=-1
+xposition=5.25
+yposition=0
 text="A Door."
 confirmtext="Explore"
 event=MonsterZombie
-type=explore
+type=TokenExplore
 
 [MonsterZombie]
-xposition=1
-yposition=-3
+xposition=1.75
+yposition=-1.75
 text="A Zombie!"
 add=TileSecondAlley Tile2 Tile3 Tile4 Tile5
 remove=Token0
 monster=MonsterZombie
 
 [Tile2]
-xposition=6
-yposition=-1
+xposition=7
+yposition=0
 side=TileSideYard1
 
 [Tile3]
-xposition=6
-yposition=-4
+xposition=7
+yposition=-3.5
 side=TileSideLobby
 
 [Tile4]
 xposition=0
-yposition=-4
+yposition=-3.5
 side=TileSideEntryHall
 
 [Tile5]
