Adding joint, transistion and new base tiles from 1.2.0.

--- a/content/D2E/base/tiles.ini
+++ b/content/D2E/base/tiles.ini
@@ -169,10 +169,9 @@ image="../ffg/img/009B.dds"
 traits=inside dirt
 
 [TileSide10A]
-top=3.5
-left=21.5
-pps=72
-image="img/010A.png"
+top=46
+left=46
+image="../ffg/img/010A.dds"
 traits=outside farm
 
 [TileSide10B]
@@ -254,10 +253,9 @@ image="../ffg/img/016B.dds"
 traits=inside
 
 [TileSide17A]
-top=21.5
-left=21.5
-pps=72
-image="img/017A.png"
+top=59
+left=59
+image="../ffg/img/017A.dds"
 traits=outside
 
 [TileSide17B]
@@ -267,10 +265,9 @@ image="../ffg/img/017B.dds"
 traits=inside
 
 [TileSide18A]
-top=21.5
-left=21.5
-pps=72
-image="img/018A.png"
+top=59
+left=59
+image="../ffg/img/018A.dds"
 traits=outside
 
 [TileSide18B]
