--- a/content/D2E/son/tiles.ini
+++ b/content/D2E/son/tiles.ini
@@ -116,7 +116,11 @@ left=23
 image="../ffg/img/Entrance04.dds"
 traits=blackrealm
 
-; extension A missing (city extension)
+[TileSideExtensionSoNA]
+top=75
+left=23
+image="../ffg/img/Joint04.dds"
+traits=city
 
 [TileSideExtensionSoNB]
 top=75
@@ -127,9 +131,15 @@ traits=blackrealm
 [TileSideTransitionSoNA]
 top=75.5
 left=23
-image="../ffg/img/Transition01.dds"
+image="../ffg/img/Transition02.dds"
 traits=city outside transistion
 
 ; Transition B is missing (alternate blackrealm extension)
 
-; Also missing both sides of other transition boards (br-city, city-inside) and (br-city, city-outside)
+[TileSideTransitionSoN2A]
+top=151
+left=151
+image="../ffg/img/Transition06.dds"
+traits=city inside transistion
+
+; Transition 2 B is missing (blackrealm-city)
