More tiles from 1.2.0

--- a/content/D2E/lotw/tiles.ini
+++ b/content/D2E/lotw/tiles.ini
@@ -1,6 +1,10 @@
 ; many are missing
 
-; 31A
+[TileSide31A]
+top=197
+left=197
+image="../ffg/img/031A.dds"
+traits=rubble outside
 
 [TileSide31B]
 top=197
@@ -14,11 +18,23 @@ left=46
 image="../ffg/img/032B.dds"
 traits=treasure inside
 
+[TileSide33A]
+top=151
+left=46
+image="../ffg/img/033A.dds"
+traits=outside water
+
 [TileSide34B]
 top=197
 left=354.5
 image="../ffg/img/034B.dds"
 traits=stairs inside
+
+[TileSide35A]
+top=249.5
+left=262.5
+image="../ffg/img/035A.dds"
+traits=outside
 
 [TileSide35B]
 top=249.5
