--- a/content/D2E/son/tiles.ini
+++ b/content/D2E/son/tiles.ini
@@ -12,11 +12,23 @@ left=197
 image="../ffg/img/050B.dds"
 traits=blackrealm altar
 
+[TileSide51A]
+top=289
+left=197
+image="../ffg/img/051A.dds"
+traits=city beds
+
 [TileSide51B]
 top=289
 left=197
 image="../ffg/img/051B.dds"
 traits=blackrealm
+
+[TileSide52B]
+top=302
+left=249.5
+image="../ffg/img/052B.dds"
+traits=inside water
 
 [TileSide53A]
 top=59
@@ -24,11 +36,29 @@ left=59
 image="../ffg/img/053A.dds"
 traits=outside
 
+[TileSide53B]
+top=59
+left=33
+image="../ffg/img/053B.dds"
+traits=inside water
+
+[TileSide54A]
+top=59
+left=59
+image="../ffg/img/054A.dds"
+traits=city study
+
 [TileSide54B]
 top=59
 left=33
 image="../ffg/img/054B.dds"
 traits=blackrealm pit
+
+[TileSide55A]
+top=302
+left=197
+image="../ffg/img/055A.dds"
+traits=city prison
 
 [TileSide55B]
 top=302
@@ -36,17 +66,41 @@ left=197
 image="../ffg/img/055B.dds"
 traits=blackrealm stairs
 
+[TileSide56A]
+top=302
+left=184
+image="../ffg/img/056A.dds"
+traits=city library
+
 [TileSide56B]
 top=302
 left=210
 image="../ffg/img/056B.dds"
 traits=blackrealm plinth
 
+[TileSide57A]
+top=210
+left=302
+image="../ffg/img/057A.dds"
+traits=city
+
 [TileSide57B]
-top=302
-left=210
-image="../ffg/img/056B.dds"
-traits=blackrealm plinth
+top=210
+left=302
+image="../ffg/img/057B.dds"
+traits=blackrealm
+
+[TileSide58A]
+top=341.5
+left=197
+image="../ffg/img/058A.dds"
+traits=city water
+
+[TileSide59A]
+top=232.5
+left=249.5
+image="../ffg/img/059A.dds"
+traits=blackrealm city transistion
 
 [TileSide59B]
 top=232.5
@@ -66,6 +120,18 @@ left=232.5
 image="../ffg/img/060B.dds"
 traits=blackrealm
 
+[TileSide61A]
+top=59
+left=59
+image="../ffg/img/061A.dds"
+traits=city water
+
+[TileSide62A]
+top=111.5
+left=98.5
+image="../ffg/img/062A.dds"
+traits=city
+
 [TileSide62B]
 top=111.5
 left=98.5
@@ -78,11 +144,47 @@ left=249.5
 image="../ffg/img/063B.dds"
 traits=blackrealm
 
+[TileSide65A]
+top=164
+left=46
+image="../ffg/img/065A.dds"
+traits=city
+
+[TileSide65B]
+top=164
+left=46
+image="../ffg/img/065B.dds"
+traits=blackrealm
+
+[TileSide66A]
+top=164
+left=46
+image="../ffg/img/066A.dds"
+traits=city
+
 [TileSide66B]
 top=164
 left=46
 image="../ffg/img/066B.dds"
 traits=blackrealm
+
+[TileSide67A]
+top=164
+left=151
+image="../ffg/img/067A.dds"
+traits=city
+
+[TileSide67B]
+top=164
+left=151
+image="../ffg/img/067B.dds"
+traits=blackrealm
+
+[TileSide68A]
+top=164
+left=138
+image="../ffg/img/068A.dds"
+traits=city
 
 [TileSide68B]
 top=164
