--- a/content/D2E/tt/tiles.ini
+++ b/content/D2E/tt/tiles.ini
@@ -18,11 +18,23 @@ left=197
 image="../ffg/img/044A.dds"
 traits=outside inside transistion
 
+[TileSide45B]
+top=354.5
+left=92
+image="../ffg/img/045B.dds"
+traits=inside
+
 [TileSide46B]
 top=111.5
 left=46
 image="../ffg/img/046B.dds"
 traits=water inside
+
+[TileSide48A]
+top=144.5
+left=144.5
+image="../ffg/img/048A.dds"
+traits=outside water
 
 [TileSide48B]
 top=144.5
@@ -30,6 +42,10 @@ left=144.5
 image="../ffg/img/048B.dds"
 traits=water inside
 
-; 49B
+[TileSide49B]
+top=144.5
+left=144.5
+image="../ffg/img/049B.dds"
+traits=inside water
 
 ; S2A
