--- a/content/D2E/mob/tiles.ini
+++ b/content/D2E/mob/tiles.ini
@@ -10,16 +10,40 @@ left=164
 image="../ffg/img/078A.dds"
 traits=inside
 
+[TileSide79A]
+top=151
+left=151
+image="../ffg/img/079A.dds"
+traits=outside
+
+[TileSide80A]
+top=164
+left=46
+image="../ffg/img/080A.dds"
+traits=outside
+
+[TileSide80B]
+top=164
+left=46
+image="../ffg/img/080B.dds"
+traits=inside
+
 [TileSide81A]
 top=249.5
 left=262.5
 image="../ffg/img/081A.dds"
 traits=outside swamp bridge sludge
 
-[TileSide82B]
+[TileSide82A]
 top=59
 left=98.5
 image="../ffg/img/082A.dds"
+traits=outside
+
+[TileSide82B]
+top=59
+left=98.5
+image="../ffg/img/082B.dds"
 traits=inside library
 
 [TileSide83A]
@@ -27,6 +51,24 @@ top=408.5
 left=184
 image="../ffg/img/083A.dds"
 traits=outside swamp sludge
+
+[TileSide83B]
+top=408.5
+left=184
+image="../ffg/img/083B.dds"
+traits=inside
+
+[TileSide84A]
+top=236.5
+left=144.5
+image="../ffg/img/084A.dds"
+traits=outside
+
+[TileSide84B]
+top=236.5
+left=144.5
+image="../ffg/img/084B.dds"
+traits=inside outside
 
 [TileSide85A]
 top=197
@@ -39,6 +81,18 @@ top=367.5
 left=92
 image="../ffg/img/086A.dds"
 traits=outside swamp water sludge
+
+[TileSide86B]
+top=367.5
+left=92
+image="../ffg/img/086B.dds"
+traits=inside
+
+[TileSide87A]
+top=92
+left=79
+image="../ffg/img/087A.dds"
+traits=outside
 
 [TileSide87B]
 top=92
