Adding missing tiles (except S2)

--- a/content/D2E/lor/tiles.ini
+++ b/content/D2E/lor/tiles.ini
@@ -54,17 +54,38 @@ left=197
 image="../ffg/img/040A.dds"
 traits=outside
 
+[TileSide40B]
+top=72
+left=72
+pps=72
+image="img/040B.png"
+traits=inside
+
 [TileSide41A]
 top=407
 left=197
 image="../ffg/img/041A.dds"
 traits=outside
 
+[TileSide41B]
+top=72
+left=72
+pps=72
+image="img/041B.png"
+traits=inside
+
 [TileSide42A]
 top=407
 left=197
 image="../ffg/img/042A.dds"
 traits=outside
+
+[TileSide42B]
+top=72
+left=72
+pps=72
+image="img/042B.png"
+traits=inside
 
 [TileSide43A]
 top=164
