--- a/content/D2E/lotw/tiles.ini
+++ b/content/D2E/lotw/tiles.ini
@@ -12,6 +12,13 @@ left=197
 image="../ffg/img/031B.dds"
 traits=treasure inside
 
+[TileSide32A]
+top=72
+left=72
+pps=72
+image="img/032A.png"
+traits=outside
+
 [TileSide32B]
 top=46
 left=46
@@ -23,6 +30,20 @@ top=151
 left=46
 image="../ffg/img/033A.dds"
 traits=outside water
+
+[TileSide33B]
+top=72
+left=72
+pps=72
+image="img/033B.png"
+traits=inside
+
+[TileSide34A]
+top=72
+left=72
+pps=72
+image="img/034A.png"
+traits=outside
 
 [TileSide34B]
 top=197
@@ -42,4 +63,16 @@ left=236.5
 image="../ffg/img/035B.dds"
 traits=lava inside
 
-; S1A
+[TileSideS1A]
+top=72
+left=72
+pps=72
+image="img/0S1A.png"
+traits=outside
+
+[TileSideS1B]
+top=72
+left=72
+pps=72
+image="img/0S1B.png"
+traits=inside
