--- a/content/D2E/mob/tiles.ini
+++ b/content/D2E/mob/tiles.ini
@@ -16,6 +16,13 @@ left=151
 image="../ffg/img/079A.dds"
 traits=outside
 
+[TileSide79B]
+top=72
+left=72
+pps=72
+image="img/079B.png"
+traits=inside
+
 [TileSide80A]
 top=164
 left=46
@@ -33,6 +40,13 @@ top=249.5
 left=262.5
 image="../ffg/img/081A.dds"
 traits=outside swamp bridge sludge
+
+[TileSide81B]
+top=72
+left=72
+pps=72
+image="img/081B.png"
+traits=inside
 
 [TileSide82A]
 top=59
@@ -76,6 +90,13 @@ left=197
 image="../ffg/img/085A.dds"
 traits=outside swamp
 
+[TileSide85B]
+top=72
+left=72
+pps=72
+image="img/085B.png"
+traits=inside
+
 [TileSide86A]
 top=367.5
 left=92
@@ -106,4 +127,9 @@ left=23
 image="../ffg/img/Entrance05.dds"
 traits=outside swamp
 
-; entrance side B missing
+[TileSideEntranceSwampB]
+top=72
+left=72
+pps=72
+image="img/exit-mob-b.png"
+traits=inside
