--- a/content/D2E/son/tiles.ini
+++ b/content/D2E/son/tiles.ini
@@ -24,6 +24,13 @@ left=197
 image="../ffg/img/051B.dds"
 traits=blackrealm
 
+[TileSide52A]
+top=72
+left=72
+pps=72
+image="img/052A.png"
+traits=outside
+
 [TileSide52B]
 top=302
 left=249.5
@@ -96,6 +103,13 @@ left=197
 image="../ffg/img/058A.dds"
 traits=city water
 
+[TileSide58B]
+top=72
+left=72
+pps=72
+image="img/058B.png"
+traits=blackrealm
+
 [TileSide59A]
 top=262.5
 left=249.5
@@ -126,6 +140,13 @@ left=59
 image="../ffg/img/061A.dds"
 traits=city water
 
+[TileSide61B]
+top=72
+left=72
+pps=72
+image="img/061B.png"
+traits=blackrealm
+
 [TileSide62A]
 top=111.5
 left=98.5
@@ -138,10 +159,31 @@ left=98.5
 image="../ffg/img/062B.dds"
 traits=blackrealm
 
+[TileSide63A]
+top=72
+left=72
+pps=72
+image="img/063A.png"
+traits=city
+
 [TileSide63B]
 top=354.5
 left=249.5
 image="../ffg/img/063B.dds"
+traits=blackrealm
+
+[TileSide64A]
+top=72
+left=72
+pps=72
+image="img/064A.png"
+traits=city
+
+[TileSide64B]
+top=72
+left=72
+pps=72
+image="img/064B.png"
 traits=blackrealm
 
 [TileSide65A]
@@ -192,7 +234,19 @@ left=164
 image="../ffg/img/068B.dds"
 traits=blackrealm
 
-; 69B
+[TileSide69A]
+top=72
+left=72
+pps=72
+image="img/069A.png"
+traits=city
+
+[TileSide69B]
+top=72
+left=72
+pps=72
+image="img/069B.png"
+traits=blackrealm
 
 [TileSideCapSoNA]
 top=90
@@ -236,7 +290,12 @@ left=23
 image="../ffg/img/Transition02.dds"
 traits=city outside transistion
 
-; Transition B is missing (alternate blackrealm extension)
+[TileSideTransitionSoNB]
+top=72
+left=72
+pps=72
+image="img/extension2.png"
+traits=blackrealm
 
 [TileSideTransitionSoN2A]
 top=151
@@ -244,4 +303,9 @@ left=151
 image="../ffg/img/Transition06.dds"
 traits=city inside transistion
 
-; Transition 2 B is missing (blackrealm-city)
+[TileSideTransitionSoN2B]
+top=72
+left=72
+pps=72
+image="img/transition2B.png"
+traits=blackrealm city transition
