--- a/content/D2E/tctr/tiles.ini
+++ b/content/D2E/tctr/tiles.ini
@@ -36,6 +36,13 @@ left=184
 image="../ffg/img/090B.dds"
 traits=inside stairs
 
+[TileSide91A]
+top=72
+left=72
+pps=72
+image="img/091A.png"
+traits=outside
+
 [TileSide91B]
 top=197
 left=289
@@ -65,6 +72,13 @@ top=197
 left=289
 image="../ffg/img/093B.dds"
 traits=inside map
+
+[TileSide94A]
+top=72
+left=72
+pps=72
+image="img/094A.png"
+traits=outside
 
 [TileSide94B]
 top=197
@@ -102,11 +116,22 @@ left=138
 image="../ffg/img/097A.dds"
 traits=outside
 
+[TileSide97B]
+top=72
+left=72
+pps=72
+image="img/097B.png"
+traits=inside
+
+[TileSide98A]
+top=72
+left=72
+pps=72
+image="img/098A.png"
+traits=outside
+
 [TileSide98B]
 top=46
 left=203.5
 image="../ffg/img/098B.dds"
 traits=inside
-
-; last tile number?
-; does the swamp entrance go here?
