--- a/content/D2E/tt/tiles.ini
+++ b/content/D2E/tt/tiles.ini
@@ -18,17 +18,52 @@ left=197
 image="../ffg/img/044A.dds"
 traits=outside inside transistion
 
+[TileSide44B]
+top=72
+left=72
+pps=72
+image="img/044B.png"
+traits=inside
+
+[TileSide45A]
+top=72
+left=72
+pps=72
+image="img/045A.png"
+traits=outside
+
 [TileSide45B]
 top=354.5
 left=92
 image="../ffg/img/045B.dds"
 traits=inside
 
+[TileSide46A]
+top=72
+left=72
+pps=72
+image="img/046A.png"
+traits=outside
+
 [TileSide46B]
 top=111.5
 left=46
 image="../ffg/img/046B.dds"
 traits=water inside
+
+[TileSide47A]
+top=72
+left=72
+pps=72
+image="img/047A.png"
+traits=outside
+
+[TileSide47B]
+top=72
+left=72
+pps=72
+image="img/047B.png"
+traits=inside
 
 [TileSide48A]
 top=144.5
@@ -41,6 +76,13 @@ top=144.5
 left=144.5
 image="../ffg/img/048B.dds"
 traits=water inside
+
+[TileSide49A]
+top=72
+left=72
+pps=72
+image="img/049A.png"
+traits=outside
 
 [TileSide49B]
 top=144.5
