--- a/content/D2E/mor/tiles.ini
+++ b/content/D2E/mor/tiles.ini
@@ -6,6 +6,13 @@ left=197
 image="../ffg/img/070A.dds"
 traits=outside inside transition
 
+[TileSide70B]
+top=72
+left=72
+pps=72
+image="img/070B.png"
+traits=inside
+
 [TileSide71A]
 top=197
 left=197
@@ -54,17 +61,38 @@ left=315
 image="../ffg/img/074B.dds"
 traits=inside outside transition
 
+[TileSide75A]
+top=72
+left=72
+pps=72
+image="img/075A.png"
+traits=outside pit
+
 [TileSide75B]
 top=46
 left=46
 image="../ffg/img/075B.dds"
 traits=inside
 
+[TileSide76A]
+top=72
+left=72
+pps=72
+image="img/076A.png"
+traits=outside
+
 [TileSide76B]
 top=164
 left=46
 image="../ffg/img/076B.dds"
 traits=inside
+
+[TileSide77A]
+top=72
+left=72
+pps=72
+image="img/077A.png"
+traits=outside
 
 [TileSide77B]
 top=164
